--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,4 @@
 SECRET = "@secretKey@228@avtoServer"
 REFRESH_SECRET = "@refreshSercrdfdklDkeysecretKey@228@avtoServer"
 MONGO_NAME = "iqura"
-MONGO_PASSWORD = "l3Q8Fpf00ur7lRQi"
+MONGO_PASSWORD = "l69GGg99jDbp9A4M"
